fix second task